Slightly improved readability of type proof

--- a/doc/Types.tex
+++ b/doc/Types.tex
@@ -262,7 +262,7 @@ n \in \N $ & \\
 %<*univgen>
 \begin{prooftree}
 \AxiomC{$\vdash T : Num$}
-\RightLabel{(universe-generalisation)}
+\RightLabel{(univ-gen)}
 \UnaryInfC{$\vdash T : Type$}
 \end{prooftree}
 %</univgen>
