First wave of correction
This includes a lot of extensions of the content though...

--- a/doc/Types.tex
+++ b/doc/Types.tex
@@ -289,7 +289,7 @@ n \in \N $ & \\
 \begin{prooftree}
 \AxiomC{$\Sigma,\Delta,\Gamma \vdash M : A \Rightarrow B$}
 \AxiomC{$\Sigma,\Delta,\Gamma \vdash N : B$}
-\RightLabel{(fun-app)}
+\RightLabel{(app)}
 \BinaryInfC{$\Sigma,\Delta,\Gamma \vdash
   \syn{(} M \; N \syn{)} : B$}
 \end{prooftree}
