--- a/highlighter/latex/scade.tex
+++ b/highlighter/latex/scade.tex
@@ -18,7 +18,7 @@
       , default, sig, automaton, state, restart
       , resume, every, times, do, emit
       , case, of, fby, merge, flatten
-      , true, false
+      , true, false, activate
     },
     morekeywords=[2]{bool, char, int, real, clock, probe},
     morekeywords=[3]{initial, final, unless, until, synchro},
