Mode corrections and added examples for bmc/k-induct

--- a/doc/Types.tex
+++ b/doc/Types.tex
@@ -63,7 +63,7 @@ Datenfluss ($F$), Anfangszustand ($I$), Assertion ($A$) und Invarianten ($P$).
 \AxiomC{}
 \RightLabel{(enum)}
 \UnaryInfC{$\vdash \syn{enum } x \syn{ = \{} c_1, \ldots, c_n  \syn{\}}
-  \therefore \{(x, \{c_i \colon \ast \Rightarrow x\})\}$}
+  \therefore \{(c_i, x) \:|\: i = 1, \dotsc, n\}$}
 \end{prooftree}
 
 %</typedefrules>
