Corrections, abstract, conclusion and restart transitions

--- a/highlighter/latex/scade.tex
+++ b/highlighter/latex/scade.tex
@@ -13,7 +13,7 @@
       type, else, if, node, returns, then
       , returns, var, let, tel, package, public
       , private, imported, open, group
-      , const, sensor, function, when, not
+      , const, sensor, function, when, match, not
       , or, and, xor, mod, end, pre, last
       , default, sig, automaton, state, restart
       , resume, every, times, do, emit
