Completed description of missing Scade elements

--- a/highlighter/latex/scade.tex
+++ b/highlighter/latex/scade.tex
@@ -18,7 +18,8 @@
       , default, sig, automaton, state, restart
       , resume, every, times, do, emit
       , case, of, fby, merge, flatten
-      , true, false, activate
+      , true, false, activate, where, numeric
+      , specialize, guarantee
     },
     morekeywords=[2]{bool, char, int, real, clock, probe},
     morekeywords=[3]{initial, final, unless, until, synchro},
